--- a/keeper/ActiveForm/ActiveForm.css
+++ b/keeper/ActiveForm/ActiveForm.css
@@ -1,70 +1,33 @@
 /* styles */
 
-.form {
+.bounded {
   display: flex;
-  flex-direction: column;
+  flex-wrap: nowrap;
   align-items: center;
-}
-
-.row {
-  display: flex;
-  align-self: stretch;
-  flex-wrap: wrap;
-  padding: 0 80px;
-}
-
-.col {
-  flex: 0 0 50%;
-  padding: 0 6px;
-  margin-bottom: 12px;
-
-  &:nth-child(2n+1) {
-    padding-left: 0;
-  }
-
-  &:nth-child(2n) {
-    padding-right: 0;
-  }
-}
-
-.label {
-  display: block;
-  font-weight: 800;
-  text-transform: uppercase;
-  font-size: 12px;
+  padding: 0 12px;
+  line-height: 24px;
 }
 
 .input {
   appearance: none;
-  width: 100%;
-  border-radius: 2px;
-  border: 1px solid var(--pale3);
+  width: 110px;
+  border-radius: 0;
+  border: none;
   background-color: var(--white);
   height: 36px;
   line-height: 36px;
   font-size: 16px;
   padding: 0 6px;
-  box-shadow: 0 0 5px var(--pale4);
+  margin-right: 1px;
   transition: box-shadow 0.15s linear;
 
   &:focus {
-    box-shadow: 0 0 5px var(--green5);
+    box-shadow: inset 0 0 5px var(--green5);
   }
 
   &.error {
-    box-shadow: 0 0 5px var(--red5);
+    box-shadow: inset 0 0 5px var(--red5);
   }
-}
-
-/* buttons */
-
-.buttons {
-  text-align: center;
-  margin: 0 auto;
-  font-size: 36px;
-  line-height: 48px;
-  border-radius: 48px;
-  box-shadow: 0 0 5px var(--pale4);
 }
 
 .button {
@@ -75,15 +38,17 @@
   transition: background 0.15s linear;
   cursor: pointer;
   margin-right: 1px;
-  width: 150px;
+  font-size: 20px;
+  width: 55px;
+  text-align: center;
 
   &:first-child {
-    border-radius: 48px 0 0 48px;
+    border-radius: 36px 0 0 36px;
     padding-left: 12px;
   }
 
   &:last-child {
-    border-radius: 0 48px 48px 0;
+    border-radius: 0 36px 36px 0;
     padding-right: 12px;
     margin-right: 0;
   }
