--- a/keeper/AppFooter/AppFooter.css
+++ b/keeper/AppFooter/AppFooter.css
@@ -1,6 +1,6 @@
 /* styles */
 
-.AppHeader {
+.AppFooter {
   user-select: none;
   overflow: hidden;
   height: 48px;
@@ -13,6 +13,7 @@
   box-shadow: 0 0 10px var(--dark3);
   position: relative;
   z-index: 100;
+  align-items: center;
 
   & a {
     color: var(--white);
@@ -24,32 +25,4 @@
       color: var(--green5);
     }
   }
-}
-
-.disabled {
-  pointer-events: none;
-
-  & a {
-    cursor: default;
-  }
-
-  & .menu {
-    opacity: 0;
-  }
-}
-
-.logo {
-  margin-left: 6px;
-}
-
-.menu {
-  flex-grow: 1;
-  display: flex;
-  justify-content: flex-end;
-  transition: opacity 0.15s linear;
-}
-
-.menuItem {
-  flex: 0 0 36px;
-  text-align: center;
 }
